plex/plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: plex
  name: plex
  namespace: mediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: plex
    spec:
      containers:
      - image: jaymoulin/plex
        name: plex
        hostNetwork: true
        ports:
        - containerPort: 32400
        - containerPort: 3005
        - containerPort: 8324
        - containerPort: 32469
        - containerPort: 1900
          protocol: UDP
        - containerPort: 32410
          protocol: UDP
        - containerPort: 32412
          protocol: UDP
        - containerPort: 32413
          protocol: UDP
        - containerPort: 32414
          protocol: UDP
        resources: {}
        volumeMounts:
        - mountPath: /media
          name: media
        - mountPath: /root/Library
          name: plex-config
      restartPolicy: Always
      volumes:
      - name: media
        nfs:
          server: 192.168.1.56
          path: "/mnt/mediahdd/"
      - name: plex-config
        persistentVolumeClaim:
          claimName: plex-config
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
            - key: node-role.kubernetes.io/master
              operator: NotIn
              values:
              - ''

status: {}
